Wed May 22 13:12:48 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0786.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Fix W0786 code check in
	  order not to warn when a typedefed type which is same as signed or
	  unsigned int is specified as a base of the bit-field.

Tue May 21 19:34:10 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/cc1/parser.y : Fix abend problem in parsing unnamed
	  bit-field declaration.

Sat May 18 15:25:51 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W1047.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/cc1/syntax.rb : Fix bad expression-constancy check in
	  order to treat an address-expression as a constant-expression.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Fix W1047 code check to
	  check expression constancy by the newly added unified interface.

Fri May 17 17:42:35 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W0610.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/cc1/interp.rb : Fix bad value domain management of the
	  variable whose storage duration is static.

Fri May 17 15:42:42 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* share/doc/users_guide_ja.texi : Revise description of W0642 message.
	* share/doc/users_guide_en.texi : Ditto.

Fri May 17 15:00:25 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* features/code_check/W9003.feature : Add scenario to reproduce a known
	  bug.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Revise specification of
	  W0642 code check in order to warn about all the illegal address
	  derivation from the object declared as `register'.
	* etc/mesg.d/c_builtin/ja_JP/messages.yml : Ditto.
	* etc/mesg.d/c_builtin/en_US/messages.yml : Ditto.

	* lib/adlint/exam/c_builtin/cc1_check.rb : Add notification about
	  object address derivation.
