@@ -119,14 +119,35 @@ module Cc1 #:nodoc:
     end
 
     def translate_identifier(tok, lexer_ctxt)
+      # NOTE: To translate given IDENTIFIER into TYPEDEF_NAME if needed.
+
+      # NOTE: The ISO C99 standard says;
+      #
+      # 6.2.3 Name spaces of identifiers
+      #
+      # 1 If more than one declaration of a particular identifier is visible at
+      #   any point in a translation unit, the syntactic context disambiguates
+      #   uses that refer to different entities.  Thus, there are separate name
+      #   spaces for various categories of identifiers, as follows:
+      #   -- label names (disambiguated by the syntax of the label declaration
+      #      and use);
+      #   -- the tags of structures, unions, and enumerations (disambiguated by
+      #      following any of the keywords struct, union, or enum);
+      #   -- the members of structures or unions; each structure or union has a
+      #      separate name space for its members (disambiguated by the type of
+      #      the expression used to access the member via the . or ->
+      #      operator);
+      #   -- all other identifiers, called ordinary identifiers (declared in
+      #      ordinary declarators or as enumeration constants).
+
       if @identifier_translation
         if tok.type == :IDENTIFIER
           return tok if @object_names.include?(tok.value)
           if @typedef_names.include?(tok.value)
             unless @lst_tok and
-                   @lst_tok.type == :STRUCT || @lst_tok.type == :UNION ||
-                   @lst_tok.type == :ENUM ||
-                   @lst_tok.type == "->" || @lst_tok.type == "."
+                @lst_tok.type == :STRUCT || @lst_tok.type == :UNION ||
+                @lst_tok.type == :ENUM ||
+                @lst_tok.type == "->" || @lst_tok.type == "."
               tok = tok.class.new(:TYPEDEF_NAME, tok.value, tok.location)
             end
           end
